# fairlens

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  Makefile  README.md  codecov.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  codeql-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature.yml  feature_request.md  issue.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix_template.md  pull_request_template.md
.github/workflows/: ci.yml  codeql-analysis.yml  publish-pypi.yml
data/: biased_data_mixed_types.csv  claim_prediction.csv
datasets/: arrhythmia.csv  compas.csv  drug_consumption.csv  german_credit_data.csv
docs/: api-reference.rst  changelog.rst  conf.py  contributing.rst  index.rst  license.rst  refs.bib  requirements.txt  user-guide.rst
docs/_static/css/: custom.css
docs/_templates/: base.rst  class.rst  layout.html  module.rst  version.html
docs/api-docs/: bias.rst  fairlens.rst  fairlens.sensitive.rst  modules.rst  sensitive.rst
docs/reference/: bias.rst  index.rst
docs/user_guide/: adult.nblink  adult.rst  bias.rst  compas.nblink  correlations.rst  fairness.rst  german.rst  index.rst  metrics.rst  quickstart.rst  scorer.rst  sensitive.rst  significance.rst  viz.rst
fairness/scorer/: __init__.py  fairness_scorer.py
fairness/transformer/: base.py  dtype.py
notebooks/: adult.ipynb  compas.ipynb  compas.py
src/: _version.py
src/fairlens/: __init__.py  config.py  scorer.py  utils.py
src/fairlens/bias/: __init__.py  distance.py  exceptions.py  fairness_scorer.py  heatmap.py  metrics.py  p_value.py  utils.py  viz.py
src/fairlens/metrics/: __init__.py  correlation.py  correlation_metrics.py  distance.py  distance_metrics.py  significance.py  statistics.py  unified.py
src/fairlens/plot/: __init__.py  correlation.py  distr.py  heatmap.py  style.py
src/fairlens/scorer/: __init__.py  fairness_scorer.py  fairness_transformer.py  heatmap.py  sensitive_attributes.py
src/fairlens/sensitive/: __init__.py  config.py  correlation.py  detection.py  sensitive_attributes.py
src/fairlens/sensitive/configs/: config_engb.json  config_mock.json
src/fairlens/transformer/: __init__.py  base.py  binning.py  dtype.py  exceptions.py  fairness_transformer.py
src/tests/: test_fairlens.py
src/tests/scorer/: test_fairness_scorer.py  test_fairness_transformer.py
tests/: test_correlation.py  test_detection.py  test_fairlens.py  test_fairness.py  test_heatmap.py  test_metrics.py  test_p_value.py  test_plot.py  test_scorer.py  test_sensitive_attributes.py  test_significance.py  test_statistics.py  test_utils.py  test_viz.py  utils.py
tests/scorer/: test_fairness_scorer.py  test_fairness_transformer.py
