[metadata]
name = fairlens
version = 0.0.1
author = Synthesized Ltd.
author_email = team@synthesized.io
description = Identify bias and measure fairness of your data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/synthesized-io/fairlens

classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas>=1.0.0
    scipy>=1.5.0
    scikit_learn>=0.23
    pyemd>=0.5.1
    tqdm

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=4.6
    pre-commit

test =
    pytest>=4.6

[flake8]
max-line-length = 120
extend-ignore = E203, W503

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120

[tests]
minversion = 5.0
addopts = -ra -q
testpaths =
    src/tests
