[metadata]
name = fairlens
author = Synthesized Ltd.
author_email = team@synthesized.io
maintainer = Synthesized Ltd.
description = Identify bias and measure fairness of your data
license = 'BSD 3-Clause License'
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/synthesized-io/fairlens
project_urls =
    Company = https://synthesized.io
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.18.4
    pandas>=1.1.5
    scipy>=1.5.4
    scikit_learn>=0.23.2
    matplotlib>=2.1.0
    seaborn>=0.11.1
    dcor>=0.5.3

[options.packages.find]
where = src

[options.package_data]
fairlens =
    sensitive/configs/*.json

[options.extras_require]
dev =
    pre-commit

test =
    pytest>=6
    pytest-cov>=2
    pyemd>=1.0.0

doc =
    sphinx==3.5.4
    ipython==7.23.1
    m2r2==0.2.7
    pydata-sphinx-theme==0.6.3
    sphinx-panels==0.6.0
    sphinxcontrib-bibtex==2.3.0

[flake8]
max-line-length = 120
extend-ignore = E203, W503

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120
